--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "data2xml": "^1.2.0",
     "joi": "^5.1.0",
+    "moment": "^2.9.0",
     "request": "^2.45.0",
     "xml2js": "^0.4.4"
   },
